@@ -210,6 +210,7 @@ static struct chip_info chips_data [] = {
 	{ "W25Q128BV",          0xef, 0x40180000, 64 * 1024, 256, 0 },
 	{ "N25Q128A",		0x20, 0xba181000, 64 * 1024, 256, 0 },
 	{ "GD25Q128C",		0xc8, 0x40180000, 64 * 1024, 256, 0 },
+	{ "25Q128BSIG",		0xc8, 0x4018c840, 64 * 1024, 256, 0 },
 //8Mb
 	{ "MX25L6405D",		0xc2, 0x2017c220, 64 * 1024, 128, 0 },
 	{ "FL064AIF",		0x01, 0x02160000, 64 * 1024, 128, 0 },
@@ -220,6 +221,7 @@ static struct chip_info chips_data [] = {
 	{ "F25L64QA",           0x8c, 0x41170000, 64 * 1024, 128, 0 },
 	{ "N25Q064A",		0x20, 0xba171000, 64 * 1024, 128, 0 },
 	{ "GD25Q64B",		0xc8, 0x40170000, 64 * 1024, 128, 0 },
+	{ "25Q64BSIG",		0xc8, 0x4017c840, 64 * 1024, 128, 0 },
 //4Mb
 	{ "AT25DF321",		0x1f, 0x47000000, 64 * 1024, 64,  0 },
 	{ "S25FL032P",		0x01, 0x02154D00, 64 * 1024, 64,  0 },
@@ -233,6 +235,7 @@ static struct chip_info chips_data [] = {
 	{ "F25L32QA",		0x8c, 0x41168c41, 64 * 1024, 64,  0 },
 	{ "N25Q032A",		0x20, 0xba161000, 64 * 1024, 64,  0 },
 	{ "GD25Q32B",		0xc8, 0x40160000, 64 * 1024, 64,  0 },
+	{ "25Q32BSIG",		0xc8, 0x4016c840, 64 * 1024, 64, 0 },
 //2Mb
 	{ "AT26DF161",		0x1f, 0x46000000, 64 * 1024, 32,  0 },
 	{ "FL016AIF",		0x01, 0x02140000, 64 * 1024, 32,  0 },
